--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 <body>
   <div class="container">
     <div class="left">
+      
+      <div class="inner-container">
       <img class="logo" src="/images/logo.svg" alt="logo">
+      <img class="bg-mobile" src="/images/hero-mobile.jpg" alt="background mobile">
       <h1><span>We're</span>
         <br/>
          coming <br/>
@@ -28,14 +31,15 @@
         Add your email below to stay up-to-date with announcements and our launch deals.
       </p>
 
-      <form>
-        <input type="email" name="" id="" placeholder="Email Address">
+      <form id="form">
+        <input type="email" name="" id="email" placeholder="Email Address">
         <img src="/images/icon-error.svg" alt="error-icon" class="error-icon"/>
         <button>
           <img src="/images/icon-arrow.svg" alt="arrow"/>
         </button>
         <small>Please provide a valid email</small>
       </form>
+    </div>
     </div>
     <div class="right bg-image"></div>
   </div>
@@ -45,5 +49,6 @@
       Coded by <a href="#">Sumana with💖</a>.
     </p>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
