--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div class="left">
       
       <div class="inner-container">
-      <img class="logo" src="/images/logo.svg" alt="logo">
-      <img class="bg-mobile" src="/images/hero-mobile.jpg" alt="background mobile">
+      <img class="logo" src="images/logo.svg" alt="logo">
+      <img class="bg-mobile" src="images/hero-mobile.jpg" alt="background mobile">
       <h1><span>We're</span>
         <br/>
          coming <br/>
@@ -33,9 +33,9 @@
 
       <form id="form">
         <input type="email" name="" id="email" placeholder="Email Address">
-        <img src="/images/icon-error.svg" alt="error-icon" class="error-icon"/>
+        <img src="images/icon-error.svg" alt="error-icon" class="error-icon"/>
         <button>
-          <img src="/images/icon-arrow.svg" alt="arrow"/>
+          <img src="images/icon-arrow.svg" alt="arrow"/>
         </button>
         <small>Please provide a valid email</small>
       </form>
